Overflow fix

--- a/src/styles/views/consquare/_wizardTower.scss
+++ b/src/styles/views/consquare/_wizardTower.scss
@@ -56,6 +56,7 @@
 
 .towerVideo {
     grid-area: tower;
+    overflow: hidden;
 }
 
 .infoTile {
